--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
     "canvas-confetti": "^1.9.4",
+    "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.2",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.6.0",
     "googleapis": "^167.0.0",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.11.0",
     "next": "^16.1.1",
     "pdfjs-dist": "^4.4.168",
     "react": "18.2.0",
