--- a/package.json
+++ b/package.json
@@ -29,15 +29,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
-    "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.1.0",
-    "react-slick": "^0.31.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "sitemap": "^9.0.0",
-    "slick-carousel": "^1.8.1"
+    "sitemap": "^9.0.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
