--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build:sitemap": "npx ts-node api/update-public-sitemap.ts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.2",
     "@cloudflare/playwright": "^1.0.0",
     "@cloudflare/puppeteer": "^1.0.4",
     "@google/genai": "^1.31.0",
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
     "@vercel/speed-insights": "^1.3.1",
+    "ai": "^6.0.6",
     "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.2",
