--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google/generative-ai": "^0.21.0",
     "@splidejs/react-splide": "^0.7.12",
     "@types/nodemailer": "^7.0.5",
+    "@types/video.js": "^7.3.58",
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^6.0.6",
     "canvas-confetti": "^1.9.4",
@@ -41,7 +42,10 @@
     "recharts": "^2.15.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "sitemap": "^9.0.0"
+    "sitemap": "^9.0.0",
+    "video.js": "^8.23.7",
+    "videojs-contrib-quality-levels": "^4.1.0",
+    "videojs-hls-quality-selector": "^2.0.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
